src/objects/USA_gov__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Agency_Website_2__c</fullName>
        <label>Agency Website 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agency_Website_3__c</fullName>
        <label>Agency Website 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agency_Website_4__c</fullName>
        <label>Agency Website 4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agency_Website__c</fullName>
        <description>Related agency website.</description>
        <label>Agency Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Autopublish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator field when an article needs to be auto published.</description>
        <label>Autopublish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Use_By__c</fullName>
        <label>For Use By</label>
        <picklist>
            <picklistValues>
                <fullName>USA.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gobiernousa.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Guia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Custom language field for integration.</description>
        <label>CMS Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Taxonomy__c</fullName>
        <label>Taxonomy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Asset_Body__c</fullName>
        <description>HTML and rich text enabled body for the article asset.</description>
        <label>Text Asset Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>USA_gov_Article_Id__c</fullName>
        <label>USA.gov Article Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>USA.gov</label>
    <pluralLabel>USA.gov</pluralLabel>
</CustomObject>